# soap-service-example

./: README.md
.net-client/: README.md
.net-client/dotnet-soap-client/: dotnet-soap-client.sln
.net-client/dotnet-soap-client/dotnet-soap-client/: Program.cs  dotnet-soap-client.csproj
.net-client/dotnet-soap-client/dotnet-soap-client/Properties/: launchSettings.json
java-client/: README.md  pom.xml
java-client/src/main/java/: WSClient.java
java-client/src/main/java/proxy/: .wsdl  Account.java  AccountsList.java  AccountsListResponse.java  BankServiceService.java  BankWS.java  Convert.java  ConvertResponse.java  GetAccount.java  GetAccountResponse.java  GetSymbols.java  GetSymbolsResponse.java  ObjectFactory.java  SymbolsWrapper.java
php-client/: README.md  composer.json
php-client/src/: MySoapClassmap.php  MySoapClient.php  MySoapClientFactory.php  index.php
php-client/src/Type/: Account.php  AccountsList.php  AccountsListResponse.php  Convert.php  ConvertResponse.php  Entry.php  GetAccount.php  GetAccountResponse.php  GetSymbols.php  GetSymbolsResponse.php  Symbols.php  SymbolsWrapper.php
php-client/src/config/: soap-client.php
py-client/: README.md  app.py  pyproject.toml
py-client/tests/: test_py_client.py
soap-convertor/src/main/java/api/entities/: ConvertResult.java  Symbols.java
soap-convertor/src/main/java/ws/: BankService.java
soap-ws/: README.md  pom.xml
soap-ws/src/main/java/: ServerJWS.java
soap-ws/src/main/java/api/: ApiService.java
soap-ws/src/main/java/ws/: Account.java  BankService.java
(+1 files in other folders)
