[tool.poetry]
name = "py-client"
version = "0.1.0"
description = "python client to consume JaxWS soap endpoints"
authors = ["Ayoub👾🦆 <ubmagh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
zeep = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
